kind-k8s-cluster-deployment/app-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bidding-web
spec:
  replicas: 2
  selector:
    matchLabels: { app: bidding-web }
  template:
    metadata:
      labels: { app: bidding-web }
    spec:
      containers:
      - name: web
        image: bidding-app:latest
        imagePullPolicy: Never 
        ports: [{ containerPort: 8000 }]
