kind-k8s-cluster-deployment/app-backend/service.yaml
apiVersion: v1
kind: Service
metadata: { name: bidding-service }
spec:
  selector: { app: bidding-web }
  ports: [{ port: 80, targetPort: 8000 }]
