kind-k8s-cluster-deployment/app-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bidding-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: bidding-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bidding-service
            port: { number: 80 }
